[package]
name = "autossh"
version = "1.4.0"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[lib]
name = "autossh"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "autossh"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = false
debug = true

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
